Undoing bricker's earlier 'Fixed stretch-out image' modification

--- a/app/assets/stylesheets/display.css.scss
+++ b/app/assets/stylesheets/display.css.scss
@@ -2091,8 +2091,7 @@ FEEDGRID
                                                 .feedgrid figure img {
                                                     display: block;
                                                     width: auto;
-                                                    height: auto;
-                                                    max-height: 100%;
+                                                    height: 100%;
                                                     max-width: 100%;
                                                     margin: 0 auto;
                                                 }
